--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+  <!-- CSP -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self';
+    style-src 'self';
+    img-src 'self';
+    font-src 'self';
+    connect-src 'self';
+    object-src 'none';
+    frame-src 'none';
+    media-src 'self';
+    upgrade-insecure-requests;">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -44,7 +57,7 @@
         "name": "Freelance"
       }
     }
-    </script>
+  </script>
 </head>
 
 <body>
