NEW: resume added

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,12 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About Me</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li>
+          <a href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
+            rel="noopener noreferrer" download>
+            Resume Download
+          </a>
+        </li>
       </ul>
     </nav>
   </header>
