--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <!-- CSP -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self';
+    script-src 'self' 'unsafe-inline';
     style-src 'self';
+    style-src-elem 'self';
     img-src 'self';
     font-src 'self';
     connect-src 'self';
@@ -60,7 +61,7 @@
   </script>
 </head>
 
-<body>
+<body class="light">
 
   <!-- Header -->
   <header>
@@ -69,6 +70,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About Me</a></li>
+        <li><button id="themeChanger">Toggle Mode</button></li>
         <li>
           <a href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
             rel="noopener noreferrer" download>
@@ -137,7 +139,7 @@
   </footer>
 
   <!-- Link to external JavaScript -->
-  <script src="index.js"></script>
+  <script src="index.js" type="module" defer></script>
 </body>
 
 </html>
