--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html lang="en">
 
 <head>
+  <!-- CSP -->
+  <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self';
+    script-src 'self' 'unsafe-inline';
+    style-src 'self';
+    style-src-elem 'self';
+    img-src 'self';
+    font-src 'self';
+    connect-src 'self';
+    object-src 'none';
+    frame-src 'none';
+    media-src 'self';
+    upgrade-insecure-requests;">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -18,11 +32,11 @@
   <meta property="og:description"
     content="A portfolio showcasing web applications developed using the MEAN stack (MongoDB, Express, Angular, Node.js).">
   <!-- <meta property="og:image" content="https://example.com/og-image.jpg"> -->
-  <!-- <meta property="og:url" content="https://yourportfolio.com"> -->
+  <meta property="og:url" content="https://anonymous0000007.github.io/portfolio/">
   <meta property="og:type" content="website">
 
   <!-- Favicon -->
-  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/assets/favicon.ico" type="theme-toggleimage/x-icon">
 
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="index.css">
@@ -44,11 +58,14 @@
         "name": "Freelance"
       }
     }
-    </script>
+  </script>
+
+  <!-- internal modules -->
+  <script src="./js/localstorge.js" type="module" defer></script>
+  <script src="./js/console.js" type="module" defer></script>
 </head>
 
 <body>
-
   <!-- Header -->
   <header>
     <nav>
@@ -56,70 +73,42 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About Me</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li>
+          <a href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
+            rel="noopener noreferrer" download>
+            Resume Download
+          </a>
+        </li>
+        <li>
+          <button class="theme-changer" id="theme-changer" aria-live="polite">
+            <svg class="sun-and-moon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
+              <mask class="moon" id="moon-mask">
+                <rect x="0" y="0" width="100%" height="100%" fill="white" />
+                <circle cx="24" cy="10" r="6" fill="black" />
+              </mask>
+              <circle class="sun" cx="12" cy="12" r="6" mask="url(#moon-mask)" fill="currentColor" />
+              <g class="sun-beams" stroke="currentColor">
+                <line x1="12" y1="1" x2="12" y2="3" />
+                <line x1="12" y1="21" x2="12" y2="23" />
+                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+                <line x1="1" y1="12" x2="3" y2="12" />
+                <line x1="21" y1="12" x2="23" y2="12" />
+                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
+              </g>
+            </svg>
+          </button>
+        </li>
       </ul>
     </nav>
   </header>
 
   <!-- Main Content Section -->
-  <main>
-    <section id="home">
-      <h1>Welcome to My Portfolio</h1>
-      <p>I am John Doe, a Full Stack Developer specializing in the MERN stack (MongoDB, Express, React, Node.js). I
-        build scalable, efficient, and dynamic web applications and services.</p>
-    </section>
 
-    <section id="projects">
-      <h2>Featured Projects</h2>
-      <div class="project">
-        <img src="project1.jpg" alt="E-Commerce Web App built with MERN Stack">
-        <h3><a href="/project1">E-Commerce Web App</a></h3>
-        <p>This project is an end-to-end e-commerce web application built using the MERN stack, providing a smooth and
-          interactive user experience.</p>
-      </div>
-      <div class="project">
-        <img src="project2.jpg" alt="Social Media Application using MERN Stack">
-        <h3><a href="/project2">Social Media Application</a></h3>
-        <p>A fully functional social media app developed using MongoDB, Express, React, and Node.js with real-time
-          notifications and chat features.</p>
-      </div>
-      <!-- Add more projects here -->
-    </section>
-
-    <section id="about">
-      <h2>About Me</h2>
-      <p>As a Full Stack Developer, I have experience building applications using the MERN stack. My expertise includes
-        database design with MongoDB, back-end development with Express and Node.js, and creating responsive user
-        interfaces with React. I am passionate about writing clean, maintainable code and delivering high-quality
-        software solutions.</p>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>If you'd like to discuss a project or hire me for your next web or mobile app development, feel free to reach
-        out!</p>
-      <form action="/submit_form" method="POST">
-        <label for="name">Your Name:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Your Email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Your Message:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
-
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Rushil Shah | <a href="/privacy-policy">Privacy Policy</a></p>
-  </footer>
 
   <!-- Link to external JavaScript -->
-  <script src="index.js"></script>
+  <script src="index.js" type="module" defer></script>
 </body>
 
 </html>
