--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta property="og:type" content="website">
 
   <!-- Favicon -->
-  <link rel="icon" href="/assets/favicon.ico" type="theme-toggleimage/x-icon">
+  <link rel="icon" href="./assets/favicon.ico" type="theme-toggleimage/x-icon">
 
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="index.css">
