--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <!-- CSP -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline';
+    script-src 'self' 'unsafe-inline' https://www.googletagmanager.com;
     style-src 'self';
     style-src-elem 'self';
     img-src 'self';
     font-src 'self';
-    connect-src 'self';
+    connect-src 'self' https://www.google-analytics.com;
     object-src 'none';
     frame-src 'none';
     media-src 'self';
@@ -60,6 +60,16 @@
     }
   </script>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YCXZNJVMQF"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YCXZNJVMQF');
+  </script>
+
   <!-- internal modules -->
   <script src="./js/localstorge.js" type="module" defer></script>
   <script src="./js/console.js" type="module" defer></script>
@@ -74,7 +84,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About Me</a></li>
         <li>
-          <a href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
+          <a id="cv-download" href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
             rel="noopener noreferrer" download>
             Resume Download
           </a>
