--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     script-src 'self' 'unsafe-inline' https://www.googletagmanager.com;
     style-src 'self';
     style-src-elem 'self';
-    img-src 'self';
+    img-src 'self' data: w3.org/svg/2000;
     font-src 'self';
     connect-src 'self' https://www.google-analytics.com;
     object-src 'none';
@@ -30,16 +30,25 @@
   <!-- Open Graph Meta Tags (for social sharing) -->
   <meta property="og:title" content="Rushil Shah | Full Stack Developer">
   <meta property="og:description"
-    content="A portfolio showcasing web applications developed using the MEAN stack (MongoDB, Express, Angular, Node.js).">
-  <!-- <meta property="og:image" content="https://example.com/og-image.jpg"> -->
+    content="Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+  <meta property="og:image"
+    content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😎</text></svg>">
   <meta property="og:url" content="https://anonymous0000007.github.io/portfolio/">
   <meta property="og:type" content="website">
 
-  <!-- Favicon -->
-  <link rel="icon" href="./assets/favicon.ico" type="theme-toggleimage/x-icon">
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:site" content="https://anonymous0000007.github.io/portfolio/">
+  <meta name="twitter:title" content="Rushil Shah | Full Stack Developer">
+  <meta name="twitter:description"
+    content="Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+  <meta name="twitter:image"
+    content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😎</text></svg>">
+  <meta name="twitter:url" content="https://anonymous0000007.github.io/portfolio/">
+  <meta name="twitter:creator" content="@Rushil091998">
 
-  <!-- Link to external CSS -->
-  <link rel="stylesheet" href="index.css">
+  <!-- Favicon -->
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😎</text></svg>">
 
   <!-- Structured Data Schema (JSON-LD) for Portfolio -->
   <script type="application/ld+json">
@@ -60,6 +69,11 @@
     }
   </script>
 
+  <!-- Link to external CSS -->
+  <link rel="stylesheet" href="./css/mobile.css" referrerpolicy="no-referrer" media="max-width: 767px">
+  <link rel="stylesheet" href="./css/desktop.css" referrerpolicy="no-referrer" media="min-width: 768px">
+  <link rel="stylesheet" href="index.css" referrerpolicy="no-referrer">
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YCXZNJVMQF"></script>
   <script>
@@ -76,10 +90,33 @@
 </head>
 
 <body>
+
   <!-- Header -->
   <header>
     <nav>
       <ul>
+        <svg width="18" height="18" viewBox="0 0 18 18">
+          <polyline id="globalnav-menutrigger-bread-bottom" fill="none" stroke="currentColor" stroke-width="1.2"
+            stroke-linecap="round" stroke-linejoin="round" points="2 12, 16 12"
+            class="globalnav-menutrigger-bread globalnav-menutrigger-bread-bottom">
+            <animate id="globalnav-anim-menutrigger-bread-bottom-open" attributeName="points" keyTimes="0;0.5;1"
+              dur="0.24s" begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+              values=" 2 12, 16 12; 2 9, 16 9; 3.5 15, 15 3.5"></animate>
+            <animate id="globalnav-anim-menutrigger-bread-bottom-close" attributeName="points" keyTimes="0;0.5;1"
+              dur="0.24s" begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+              values=" 3.5 15, 15 3.5; 2 9, 16 9; 2 12, 16 12"></animate>
+          </polyline>
+          <polyline id="globalnav-menutrigger-bread-top" fill="none" stroke="currentColor" stroke-width="1.2"
+            stroke-linecap="round" stroke-linejoin="round" points="2 5, 16 5"
+            class="globalnav-menutrigger-bread globalnav-menutrigger-bread-top">
+            <animate id="globalnav-anim-menutrigger-bread-top-open" attributeName="points" keyTimes="0;0.5;1"
+              dur="0.24s" begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+              values=" 2 5, 16 5; 2 9, 16 9; 3.5 3.5, 15 15"></animate>
+            <animate id="globalnav-anim-menutrigger-bread-top-close" attributeName="points" keyTimes="0;0.5;1"
+              dur="0.24s" begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+              values=" 3.5 3.5, 15 15; 2 9, 16 9; 2 5, 16 5"></animate>
+          </polyline>
+        </svg>
         <li><a href="#home">Home</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About Me</a></li>
@@ -91,7 +128,7 @@
         </li>
         <li>
           <button class="theme-changer" id="theme-changer" aria-live="polite">
-            <svg class="sun-and-moon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
+            <svg class="sun-and-moon" aria-hidden="true" width="14" height="44" viewBox="0 0 24 24">
               <mask class="moon" id="moon-mask">
                 <rect x="0" y="0" width="100%" height="100%" fill="white" />
                 <circle cx="24" cy="10" r="6" fill="black" />
@@ -116,6 +153,7 @@
 
   <!-- Link to external JavaScript -->
   <script src="index.js" type="module" defer></script>
+
 </body>
 
 </html>
