FIX: og:image & twitter:image is not working in whatsapp preview theme issue if theme is not set then on first click theme is not changing in case of dark removed automatic apply theme in css make single class for better coding practice

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
   <meta property="og:title" content="Rushil Shah | Full Stack Developer">
   <meta property="og:description"
     content="Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
-  <meta property="og:image"
-    content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😎</text></svg>">
+  <meta property="og:image" content="https://anonymous0000007.github.io/portfolio/assets/images/favicon.png">
   <meta property="og:url" content="https://anonymous0000007.github.io/portfolio/">
   <meta property="og:type" content="website">
 
@@ -41,8 +40,7 @@
   <meta name="twitter:title" content="Rushil Shah | Full Stack Developer">
   <meta name="twitter:description"
     content="Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
-  <meta name="twitter:image"
-    content="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😎</text></svg>">
+  <meta name="twitter:image" content="https://anonymous0000007.github.io/portfolio/assets/images/favicon.png">
   <meta name="twitter:url" content="https://anonymous0000007.github.io/portfolio/">
   <meta name="twitter:creator" content="@Rushil091998">
 
