--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     }
   </script>
 
-  <!-- Link to external CSS -->
-  <link rel="stylesheet" href="./css/mobile.css" referrerpolicy="no-referrer" media="max-width: 767px">
-  <link rel="stylesheet" href="./css/desktop.css" referrerpolicy="no-referrer" media="min-width: 768px">
-  <link rel="stylesheet" href="index.css" referrerpolicy="no-referrer">
+  <!-- Link to external CSS (mobile first approach) -->
+  <link rel="stylesheet" type="text/css" href="index.css" referrerpolicy="no-referrer">
+  <link rel="stylesheet" type="text/css" href="./css/desktop.css" referrerpolicy="no-referrer"
+    media="(min-width: 768px)">
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YCXZNJVMQF"></script>
@@ -88,66 +88,128 @@
 </head>
 
 <body>
-
   <!-- Header -->
   <header>
     <nav>
       <ul>
-        <svg width="18" height="18" viewBox="0 0 18 18">
-          <polyline id="globalnav-menutrigger-bread-bottom" fill="none" stroke="currentColor" stroke-width="1.2"
-            stroke-linecap="round" stroke-linejoin="round" points="2 12, 16 12"
-            class="globalnav-menutrigger-bread globalnav-menutrigger-bread-bottom">
-            <animate id="globalnav-anim-menutrigger-bread-bottom-open" attributeName="points" keyTimes="0;0.5;1"
-              dur="0.24s" begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
-              values=" 2 12, 16 12; 2 9, 16 9; 3.5 15, 15 3.5"></animate>
-            <animate id="globalnav-anim-menutrigger-bread-bottom-close" attributeName="points" keyTimes="0;0.5;1"
-              dur="0.24s" begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
-              values=" 3.5 15, 15 3.5; 2 9, 16 9; 2 12, 16 12"></animate>
-          </polyline>
-          <polyline id="globalnav-menutrigger-bread-top" fill="none" stroke="currentColor" stroke-width="1.2"
-            stroke-linecap="round" stroke-linejoin="round" points="2 5, 16 5"
-            class="globalnav-menutrigger-bread globalnav-menutrigger-bread-top">
-            <animate id="globalnav-anim-menutrigger-bread-top-open" attributeName="points" keyTimes="0;0.5;1"
-              dur="0.24s" begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
-              values=" 2 5, 16 5; 2 9, 16 9; 3.5 3.5, 15 15"></animate>
-            <animate id="globalnav-anim-menutrigger-bread-top-close" attributeName="points" keyTimes="0;0.5;1"
-              dur="0.24s" begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
-              values=" 3.5 3.5, 15 15; 2 9, 16 9; 2 5, 16 5"></animate>
-          </polyline>
-        </svg>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#about">About Me</a></li>
+        <div class="submenu">
+          <li>
+            <a class="theme-changer" id="theme-changer" aria-live="polite">
+              <svg class="sun-and-moon" aria-hidden="true" width="18" height="18" viewBox="0 0 24 24">
+                <mask class="moon" id="moon-mask">
+                  <rect x="0" y="0" width="100%" height="100%" fill="white" />
+                  <circle cx="24" cy="10" r="6" fill="black" />
+                </mask>
+                <circle class="sun" cx="12" cy="12" r="6" mask="url(#moon-mask)" fill="currentColor" />
+                <g class="sun-beams" stroke="currentColor">
+                  <line x1="12" y1="1" x2="12" y2="3" />
+                  <line x1="12" y1="21" x2="12" y2="23" />
+                  <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+                  <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+                  <line x1="1" y1="12" x2="3" y2="12" />
+                  <line x1="21" y1="12" x2="23" y2="12" />
+                  <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+                  <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
+                </g>
+              </svg>
+            </a>
+          </li>
+
+          <div id="responsive-menu" class="responsive-menu">
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#about">About Me</a></li>
+              <li>
+                <a id="cv-download"
+                  href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
+                  rel="noopener noreferrer" download>
+                  Resume
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <li>
-          <a id="cv-download" href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
-            rel="noopener noreferrer" download>
-            Resume Download
-          </a>
-        </li>
-        <li>
-          <button class="theme-changer" id="theme-changer" aria-live="polite">
-            <svg class="sun-and-moon" aria-hidden="true" width="14" height="44" viewBox="0 0 24 24">
-              <mask class="moon" id="moon-mask">
-                <rect x="0" y="0" width="100%" height="100%" fill="white" />
-                <circle cx="24" cy="10" r="6" fill="black" />
-              </mask>
-              <circle class="sun" cx="12" cy="12" r="6" mask="url(#moon-mask)" fill="currentColor" />
-              <g class="sun-beams" stroke="currentColor">
-                <line x1="12" y1="1" x2="12" y2="3" />
-                <line x1="12" y1="21" x2="12" y2="23" />
-                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
-                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
-                <line x1="1" y1="12" x2="3" y2="12" />
-                <line x1="21" y1="12" x2="23" y2="12" />
-                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
-                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
-              </g>
+          <a id="bread-menu" class="bread-menu" aria-label="Menu" data-state="Menu">
+            <svg width="18" height="18" viewBox="0 0 18 18">
+              <polyline id="bread-bottom" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
+                stroke-linejoin="round" points="2 12, 16 12">
+                <animate id="bottom-bread-open" attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite"
+                  fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                  values=" 2 12, 16 12; 2 9, 16 9; 3.5 15, 15 3.5"></animate>
+                <animate id="bottom-bread-close" attributeName="points" keyTimes="0;0.5;1" dur="0.24s"
+                  begin="indefinite" fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                  values=" 3.5 15, 15 3.5; 2 9, 16 9; 2 12, 16 12"></animate>
+              </polyline>
+              <polyline id="bread-top" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
+                stroke-linejoin="round" points="2 5, 16 5">
+                <animate id="top-bread-open" attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite"
+                  fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                  values=" 2 5, 16 5; 2 9, 16 9; 3.5 3.5, 15 15"></animate>
+                <animate id="top-bread-close" attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite"
+                  fill="freeze" calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                  values=" 3.5 3.5, 15 15; 2 9, 16 9; 2 5, 16 5"></animate>
+              </polyline>
             </svg>
-          </button>
+          </a>
         </li>
       </ul>
     </nav>
   </header>
+
+  <!-- Main Content Section -->
+  <main>
+    <section class="container">
+      <h2>About Me</h2>
+      <p>Hello! I'm a passionate web developer with expertise in both the MEAN and MERN stack. I specialize in
+        building dynamic, full-stack applications and enjoy exploring new technologies to improve the user experience.
+        I have worked on multiple projects that showcase my skills in building scalable and high-performance
+        applications.</p>
+    </section>
+
+    <section class="container">
+      <h2>Skills</h2>
+      <div class="skills">
+        <section class="skill">
+          <h3>MEAN Stack</h3>
+          <p>MongoDB, Express.js, Angular, Node.js</p>
+        </section>
+        <section class="skill">
+          <h3>MERN Stack</h3>
+          <p>MongoDB, Express.js, React, Node.js</p>
+        </section>
+      </div>
+    </section>
+
+    <section class="container">
+      <h2>Featured Project</h2>
+      <div class="project">
+        <section class="project-card">
+          <h3>Chrome Extension Project</h3>
+          <img src="chrome-extension-thumbnail.jpg" alt="Chrome Extension Project">
+          <p>A Chrome extension I developed to enhance browsing productivity, providing quick access to key tools and
+            features. It integrates seamlessly with browsers and uses React for its front end and Node.js for its
+            server-side logic.</p>
+          <a href="https://link-to-your-extension.com" class="button" target="_blank">View Project</a>
+        </section>
+      </div>
+    </section>
+
+    <section class="contact">
+      <h2>Contact Me</h2>
+      <p>If you'd like to work together or just have a chat, feel free to get in touch.</p>
+      <p>Email: rushil.shah.dev@gmail.com</p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/er-rushil" target="_blank">Your LinkedIn</a></p>
+      <p>GitHub: <a href="https://github.com/anonymous0000007" target="_blank">Your GitHub</a></p>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Rushil Shah | <a href="/privacy-policy">Privacy Policy</a></p>
+  </footer>
 
   <!-- Link to external JavaScript -->
   <script src="index.js" type="module" defer></script>
