NEW: body home added space variables structure change use only prime numbers and multiply using calc

--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@
 
   <!-- Main Content Section -->
   <main>
+
+    <section id="home">
+      <h2>I'm Rushil Shah</h2>
+      <div class="developer">
+        <img class="man" src="./assets/images/man.svg" />
+        <img class="ring" src="./assets/images/ellipse.svg" />
+      </div>
+    </section>
+
     <section class="container">
       <h2>About Me</h2>
       <p>Hello! I'm a passionate web developer with expertise in both the MEAN and MERN stack. I specialize in
