--- a/index.html
+++ b/index.html
@@ -94,6 +94,29 @@
       <ul>
         <div class="submenu">
           <li>
+            <a>
+              <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                <text x="0" y="16" font-family="Arial" font-size="16" fill="black">😎</text>
+              </svg>
+            </a>
+          </li>
+
+          <div id="responsive-menu" class="responsive-menu">
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#about">About Me</a></li>
+              <li>
+                <a id="cv-download"
+                  href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
+                  rel="noopener noreferrer" download>
+                  Resume
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <li>
             <a class="theme-changer" id="theme-changer" aria-live="polite">
               <svg class="sun-and-moon" aria-hidden="true" width="18" height="18" viewBox="0 0 24 24">
                 <mask class="moon" id="moon-mask">
@@ -114,21 +137,6 @@
               </svg>
             </a>
           </li>
-
-          <div id="responsive-menu" class="responsive-menu">
-            <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#projects">Projects</a></li>
-              <li><a href="#about">About Me</a></li>
-              <li>
-                <a id="cv-download"
-                  href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
-                  rel="noopener noreferrer" download>
-                  Resume
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
 
         <li>
@@ -217,7 +225,6 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Rushil Shah | <a href="/privacy-policy">Privacy Policy</a></p>
   </footer>
 
   <!-- Link to external JavaScript -->
