NEW: about section responsive projects section responsive

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <nav>
       <ul>
         <li>
-          <a>
+          <a href="#">
             <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
               <text x="0" y="16" font-family="Arial" font-size="16" fill="black">😎</text>
             </svg>
@@ -169,55 +169,36 @@
   <main>
 
     <section id="home">
-      <h2>I'm Rushil Shah</h2>
+      <div>
+        <h2 class="h2">Rushil Shah</h2>
+        <p class="h3">I'm a Web Developer Who Codes with Passion and Precision!</p>
+      </div>
       <div class="developer">
         <img class="man" src="./assets/images/man.svg" />
         <img class="ring" src="./assets/images/ellipse.svg" />
       </div>
     </section>
 
-    <section class="container">
-      <h2>About Me</h2>
-      <p>Hello! I'm a passionate web developer with expertise in both the MEAN and MERN stack. I specialize in
-        building dynamic, full-stack applications and enjoy exploring new technologies to improve the user experience.
-        I have worked on multiple projects that showcase my skills in building scalable and high-performance
-        applications.</p>
+    <section id="about">
+      <h2 class="h2">About Me</h2>
+      <p class="h3 text-align-justify">I’m Rushil Shah, a full-stack developer specializing in MEAN and MERN stacks. I build dynamic, high-performance
+        apps that scale like a rocket 🚀. I’m all about pushing boundaries, learning new tech, and delivering solutions
+        that make an impact. Let’s turn your idea into a game-changing web app — fast and flawlessly!</p>
+      <section>
+        <h2 class="h3">Skills</h2>
+        <p class="h3">MongoDB, Express.js, Angular, React, Node.js</p>
+      </section>
     </section>
 
-    <section class="container">
-      <h2>Skills</h2>
-      <div class="skills">
-        <section class="skill">
-          <h3>MEAN Stack</h3>
-          <p>MongoDB, Express.js, Angular, Node.js</p>
-        </section>
-        <section class="skill">
-          <h3>MERN Stack</h3>
-          <p>MongoDB, Express.js, React, Node.js</p>
-        </section>
-      </div>
-    </section>
 
-    <section class="container">
-      <h2>Featured Project</h2>
+    <section id="projects">
+      <h2 class="h2">Projects</h2>
       <div class="project">
         <section class="project-card">
-          <h3>Chrome Extension Project</h3>
-          <img src="chrome-extension-thumbnail.jpg" alt="Chrome Extension Project">
-          <p>A Chrome extension I developed to enhance browsing productivity, providing quick access to key tools and
-            features. It integrates seamlessly with browsers and uses React for its front end and Node.js for its
-            server-side logic.</p>
-          <a href="https://link-to-your-extension.com" class="button" target="_blank">View Project</a>
+          <h3 class="h2">Chrome Extension Project</h3>
+          <p class="h3 text-align-justify">A Chrome extension I built to supercharge browsing productivity, offering quick access to essential tools and features. Using Vanilla JavaScript, I automated key processes within Chrome, streamlining workflows for a faster and smoother browsing experience.</p>
         </section>
       </div>
-    </section>
-
-    <section class="contact">
-      <h2>Contact Me</h2>
-      <p>If you'd like to work together or just have a chat, feel free to get in touch.</p>
-      <p>Email: rushil.shah.dev@gmail.com</p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/er-rushil" target="_blank">Your LinkedIn</a></p>
-      <p>GitHub: <a href="https://github.com/anonymous0000007" target="_blank">Your GitHub</a></p>
     </section>
   </main>
 
