NEW: typing effect added

--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 
     <section id="home">
       <div>
-        <h2 class="h2">Rushil Shah</h2>
-        <p class="h3">I'm a Web Developer Who Codes with Passion and Precision!</p>
+        <h2 class="h2">Hello World <br /> I'm <span id="board"></span></h2>
+        <p id="home-description" class="h3 text-align-justify"></p>
       </div>
       <div class="developer">
         <!-- responsive image load -->
