NEW: about me and project section v2

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
           <ul>
             <!-- class="menu-item" is required if u want to auto close menu on click -->
             <li><a class="menu-item" href="#home">Home</a></li>
-            <li><a class="menu-item" href="#projects">Projects</a></li>
             <li><a class="menu-item" href="#about">About Me</a></li>
+            <li><a class="menu-item" href="#projects">Projects</a></li>
             <li>
               <a id="cv-download"
                 href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
@@ -198,13 +198,26 @@
 
     <section id="about">
       <h2 class="h2">About Me</h2>
-      <p class="h3 text-align-justify">I’m Rushil Shah, a full-stack developer specializing in MEAN and MERN stacks. I
-        build dynamic, high-performance
-        apps that scale like a rocket 🚀. I’m all about pushing boundaries, learning new tech, and delivering solutions
-        that make an impact. Let’s turn your idea into a game-changing web app — fast and flawlessly!</p>
+      <p class="h3 text-align-justify">I am a driven MEAN and MERN stack developer, a force of innovation with an
+        unrelenting passion for creating powerful, scalable applications. My expertise in both front-end and back-end
+        technologies fuels my creativity, allowing me to turn complex challenges into seamless, intuitive solutions. I
+        don't just follow trends—I lead them, and I thrive on pushing boundaries and disrupting the status quo. My
+        coding is precise, my logic sharp, and my ambition fierce.
+      </p>
+      <p class="h3 text-align-justify">
+        Beyond the keyboard, I am an active open-source contributor, dedicating my skills to projects like Mozilla,
+        where I collaborate with a global community of like-minded creators. I'm always looking for new opportunities to
+        collaborate, whether it's through freelance projects or innovative partnerships. If you're ready to work with
+        someone who's not afraid to take risks, challenge norms, and create something extraordinary, let’s connect. I'm
+        here to build, innovate, and disrupt—one line of code at a time.</p>
+      <p class="h3 text-align-justify">As a passionate chess player with a rating of <b>1600+</b>, I bring the same
+        strategic thinking and problem-solving
+        skills to my development work as I do to the chessboard. Whether it’s optimizing code or planning my next move,
+        I approach every challenge with a sharp mind and relentless drive.</p>
       <section>
-        <h2 class="h3">Skills</h2>
-        <p class="h3">MongoDB, Express.js, Angular, React, Node.js</p>
+        <h2 class="h3"><b>Skills</b></h2>
+        <p class="h3">HTML, CSS, JavaScript (ES6+), Typescript, MongoDB, Express.js, Angular, React, Node.js, git,
+          mercurial</p>
       </section>
     </section>
 
@@ -213,13 +226,38 @@
       <h2 class="h2">Projects</h2>
       <div class="project">
         <section class="project-card">
-          <h3 class="h2">Chrome Extension Project</h3>
+          <h3 class="h3"><b>Chrome Extension Project</b></h3>
           <p class="h3 text-align-justify">A Chrome extension I built to supercharge browsing productivity, offering
             quick access to essential tools and features. Using Vanilla JavaScript, I automated key processes within
             Chrome, streamlining workflows for a faster and smoother browsing experience.</p>
         </section>
+
+        <section class="project-card">
+          <h3 class="h3"><b>Mozilla Open Source Contribution</b></h3>
+          <p class="h3 text-align-justify">Certainly! Here's a paragraph you can use to highlight your <b>Mozilla
+              open-source contributions</b>:
+            As an open-source contributor to <b>Mozilla</b>, I am proud to be part of a global community dedicated to
+            promoting an open, accessible, and secure internet. My contributions range from improving core features to
+            fixing bugs and enhancing user experience, always with the goal of creating more efficient and reliable
+            software for users around the world. Collaborating with like-minded developers on Mozilla projects has
+            sharpened my skills in both problem-solving and teamwork, while also giving me the opportunity to contribute
+            to projects that have a tangible, positive impact on the web. Being part of Mozilla has reinforced my belief
+            in the power of open-source software to drive innovation and create a more inclusive digital world.</p>
+        </section>
+
+        <section class="project-card">
+          <h3 class="h3"><b>Chess Project</b></h3>
+          <p class="h3 text-align-justify">I’ve created a personal chess project to track and enhance my chess playing
+            experience. It’s a platform where I can log and analyze my games, study past matches, and improve my
+            strategies over time. The project is built with a simple, intuitive interface that lets me play against AI
+            or friends, review moves, and identify areas for improvement. This personal chess journey not only allows me
+            to challenge myself but also helps me apply the same strategic thinking and problem-solving skills that I
+            use in development. It’s a continuous process of growth—whether I’m learning from a tough defeat or refining
+            a brilliant checkmate.</p>
+        </section>
       </div>
     </section>
+
   </main>
 
   <!-- Footer -->
