NEW: contact details section added

--- a/index.html
+++ b/index.html
@@ -194,6 +194,18 @@
           <img />
         </picture>
       </div>
+
+      <div id="contact-details" class="contact-details">
+        <div class="drawer">
+          <a class="press mail" href="mailto:rushil.shah.dev@gmail.com" target="_blank"></a>
+          <a class="press whatsaap" href="https://wa.me/917984299636" target="_blank"></a>
+          <a class="press linkedin" href="https://in.linkedin.com/in/er-rushil" target="_blank"></a>
+          <a class="press github" href="https://github.com/anonymous0000007" target="_blank"
+            data-is-filter-invert-needed="true"></a>
+          <a class="press twitter" href="https://x.com/rushil091998" target="_blank"
+            data-is-filter-invert-needed="true"></a>
+        </div>
+      </div>
     </section>
 
     <section id="about">
