--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- CSP -->
-  <meta http-equiv="Content-Security-Policy" content="
+  <!-- <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' 'unsafe-inline' https://www.googletagmanager.com;
     style-src 'self';
@@ -14,7 +14,7 @@
     object-src 'none';
     frame-src 'none';
     media-src 'self';
-    upgrade-insecure-requests;">
+    upgrade-insecure-requests;"> -->
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -73,14 +73,14 @@
     media="(min-width: 768px)">
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YCXZNJVMQF"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-YCXZNJVMQF"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'G-YCXZNJVMQF');
-  </script>
+  </script> -->
 
   <!-- internal modules -->
   <script src="./js/localstorge.js" type="module" defer></script>
