--- a/index.html
+++ b/index.html
@@ -198,21 +198,21 @@
       <div id="contact-details" class="contact-details">
         <div class="drawer">
           <a class="press mail" href="mailto:rushil.shah.dev@gmail.com" target="_blank">
-            <img src="https://www.google.com/a/cpanel/intelliticks.com/images/favicon.ico" />
+            <!-- <img src="https://www.google.com/a/cpanel/intelliticks.com/images/favicon.ico" /> -->
           </a>
           <a class="press whatsaap" href="https://wa.me/917984299636" target="_blank">
-            <img src="https://static.whatsapp.net/rsrc.php/v4/yz/r/ujTY9i_Jhs1.png" />
+            <!-- <img src="https://static.whatsapp.net/rsrc.php/v4/yz/r/ujTY9i_Jhs1.png" /> -->
           </a>
           <a class="press linkedin" href="https://in.linkedin.com/in/er-rushil" target="_blank">
-            <img src="https://static.licdn.com/scds/common/u/images/logos/favicons/v1/favicon.ico" />
+            <!-- <img src="https://static.licdn.com/scds/common/u/images/logos/favicons/v1/favicon.ico" /> -->
           </a>
           <a class="press github" href="https://github.com/anonymous0000007" target="_blank"
             data-is-filter-invert-needed="true">
-            <img src="https://github.githubassets.com/assets/pinned-octocat-093da3e6fa40.svg" />
+            <!-- <img src="https://github.githubassets.com/assets/pinned-octocat-093da3e6fa40.svg" /> -->
           </a>
           <a class="press twitter" href="https://x.com/rushil091998" target="_blank"
             data-is-filter-invert-needed="true">
-            <img src="https://abs.twimg.com/responsive-web/client-web/icon-svg.ea5ff4aa.svg" />
+            <!-- <img src="https://abs.twimg.com/responsive-web/client-web/icon-svg.ea5ff4aa.svg" /> -->
           </a>
         </div>
       </div>
