--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <!-- responsive image load -->
         <picture>
           <!-- hack to know image is loaded or not for loader stop -->
-          <source srcset="null" media="(max-width: 767px)" style="display: none;" />
+          <source srcset="null" media="(max-width: 767px)" class="display-none" />
           <img class="man" src="/assets/images/man.svg" />
         </picture>
         <picture class="ring">
