--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#" data-is-clickable-in-background="false">
+          <a href="#" data-is-clickable="true">
             <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
               <text x="0" y="16" font-family="Arial" font-size="16" fill="black">😎</text>
             </svg>
@@ -124,8 +124,8 @@
           </ul>
         </div>
 
-        <li>
-          <a class="theme-changer" id="theme-changer" aria-live="polite" data-is-clickable-in-background="false">
+        <li class="header-item-right-align">
+          <a class="theme-changer" id="theme-changer" aria-live="polite" data-is-clickable="true">
             <svg class="sun-and-moon" aria-hidden="true" width="18" height="18" viewBox="0 0 24 24">
               <mask class="moon" id="moon-mask">
                 <rect x="0" y="0" width="100%" height="100%" fill="white" />
