--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <picture>
           <!-- hack to know image is loaded or not for loader stop -->
           <source srcset="null" media="(max-width: 767px)" class="display-none" />
-          <img class="man" src="/assets/images/man.svg" />
+          <img class="man" src="./assets/images/man.svg" />
         </picture>
         <picture class="ring">
           <source srcset="./assets/images/ellipse.svg" media="(min-width: 768px)" />
