NEW: 404 handled 404.html added activity log added project section v3 refresh key event allowed

--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Rushil Shah",
-      "url": "https://yourportfolio.com",
+      "url": "https://anonymous0000007.github.io/portfolio/",
+      "image": "https://anonymous0000007.github.io/portfolio/assets/images/favicon.png",
+      "description": "Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.",
       "sameAs": [
         "https://www.linkedin.com/in/er-rushil",
-        "https://x.com/Rushil091998"
+        "https://x.com/Rushil091998",
+        "https://github.com/anonymous0000007"
       ],
-      "jobTitle": "Full Stack Developer (MEAN Stack)",
+      "jobTitle": "Full Stack Developer (MEAN/MERN Stack)",
       "worksFor": {
         "@type": "Organization",
         "name": "Freelance"
@@ -234,46 +237,47 @@
         I approach every challenge with a sharp mind and relentless drive.</p>
       <section>
         <h2 class="h3"><b>Skills</b></h2>
-        <p class="h3">HTML, CSS, JavaScript (ES6+), Typescript, MongoDB, Express.js, Angular, React, Node.js, git,
-          mercurial</p>
+        <p class="h3">HTML, CSS, JavaScript (ES6+), Typescript, MongoDB, Express.js, Angular, React, Node.js, Meteor,
+          git, mercurial</p>
       </section>
     </section>
 
 
     <section id="projects">
       <h2 class="h2">Projects</h2>
-      <div class="project">
-        <section class="project-card">
-          <h3 class="h3"><b>Chrome Extension Project</b></h3>
-          <p class="h3 text-align-justify">A Chrome extension I built to supercharge browsing productivity, offering
-            quick access to essential tools and features. Using Vanilla JavaScript, I automated key processes within
-            Chrome, streamlining workflows for a faster and smoother browsing experience.</p>
-        </section>
 
-        <section class="project-card">
-          <h3 class="h3"><b>Mozilla Open Source Contribution</b></h3>
-          <p class="h3 text-align-justify">Certainly! Here's a paragraph you can use to highlight your <b>Mozilla
-              open-source contributions</b>:
-            As an open-source contributor to <b>Mozilla</b>, I am proud to be part of a global community dedicated to
-            promoting an open, accessible, and secure internet. My contributions range from improving core features to
-            fixing bugs and enhancing user experience, always with the goal of creating more efficient and reliable
-            software for users around the world. Collaborating with like-minded developers on Mozilla projects has
-            sharpened my skills in both problem-solving and teamwork, while also giving me the opportunity to contribute
-            to projects that have a tangible, positive impact on the web. Being part of Mozilla has reinforced my belief
-            in the power of open-source software to drive innovation and create a more inclusive digital world.</p>
-        </section>
+      <div class="card-container">
 
-        <section class="project-card">
-          <h3 class="h3"><b>Chess Project</b></h3>
-          <p class="h3 text-align-justify">I’ve created a personal chess project to track and enhance my chess playing
-            experience. It’s a platform where I can log and analyze my games, study past matches, and improve my
-            strategies over time. The project is built with a simple, intuitive interface that lets me play against AI
-            or friends, review moves, and identify areas for improvement. This personal chess journey not only allows me
-            to challenge myself but also helps me apply the same strategic thinking and problem-solving skills that I
-            use in development. It’s a continuous process of growth—whether I’m learning from a tough defeat or refining
-            a brilliant checkmate.</p>
-        </section>
+        <div class="card">
+          <picture>
+            <source srcset="./assets/images/chrome-extension.avif" type="image/avif" />
+            <source srcset="./assets/images/chrome-extension.webp" type="image/webp" />
+            <img src="./assets/images/chrome-extension.png" />
+          </picture>
+          <div class="card-content">
+            <h3 class="h3"><b>Chrome Extension Project</b></h3>
+            <p class="h4 text-align-justify">Developed a Chrome extension to automate the login process for a specific
+              website, including handling two-factor authentication by retrieving OTPs from Gmail. This solution
+              enhances efficiency and security, with potential for future expansion to other sites.</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <picture>
+            <source srcset="./assets/images/mozilla.avif" type="image/avif" />
+            <source srcset="./assets/images/mozilla.webp" type="image/webp" />
+            <img src="./assets/images/mozilla.png" />
+          </picture>
+          <div class="card-content">
+            <h3 class="h3"><b>Mozilla Open Source Contribution</b></h3>
+            <p class="h4 text-align-justify">As an open-source contributor to Mozilla, I enhance core features, fix
+              bugs, and improve user experience to support a secure, open internet. Working with a global community has
+              strengthened my problem-solving skills and allowed me to make impactful contributions.</p>
+          </div>
+        </div>
+
       </div>
+
     </section>
 
   </main>
