FIX: lighthouse performance improvement

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="description"
     content="Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
   <meta name="keywords"
-    content="Full Stack Developer, MEAN Stack, MERN Stack, MongoDB, Express, React, Node.js, Web Development, Mobile App Development, JavaScript Developer, Web Applications, Software Development, Meteor, Redux, RxJS, HTML5, CSS3, TypeScript, JavaScript, Storybook, Bootstrap, React Query, NgRx, Java, C++">
+    content="Rushil, Rushil Shah, Rushil+Shah, Rushil Portfolio, Rushil+Portfolio, Rushil Shah Full Stack Developer, Rushil+Shah+Full+Stack+Developer, Rushil Shah Freelancer, Rushil+Shah+Freelancer, Rushil Shah Angular, Best Angular Developer, Best Full Stack Developer, Full Stack Developer, MEAN Stack, MERN Stack, MongoDB, Express, React, Node.js, Web Development, Mobile App Development, JavaScript Developer, Web Applications, Software Development, Meteor, Redux, RxJS, HTML5, CSS3, TypeScript, JavaScript, Storybook, Bootstrap, React Query, NgRx, Java, C++">
   <meta name="author" content="Rushil Shah">
   <title>Rushil Shah | Full Stack Developer</title>
 
@@ -106,7 +106,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#" data-is-clickable="true">
+          <a href="#" data-is-clickable="true" aria-label="brand">
             <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
               <text x="0" y="16" font-family="Arial" font-size="16" fill="black">😎</text>
             </svg>
@@ -152,7 +152,7 @@
         </li>
 
         <li>
-          <a id="bread-menu" class="bread-menu" aria-label="Stale">
+          <a id="bread-menu" class="bread-menu">
             <svg width="18" height="18" viewBox="0 0 18 18">
               <polyline id="bread-bottom" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
                 stroke-linejoin="round" points="2 12, 16 12">
@@ -191,26 +191,26 @@
         <!-- responsive image load -->
         <picture class="man">
           <source srcset="./assets/images/man.svg" media="(min-width: 768px)" />
-          <img />
+          <img width="" height="" alt="Rushil" />
         </picture>
         <picture class="ring">
           <source srcset="./assets/images/ellipse.svg" media="(min-width: 768px)" />
-          <img />
+          <img width="" height="" alt="" />
         </picture>
       </div>
 
       <div id="contact-details" class="contact-details">
         <div class="drawer">
-          <a class="press mail" href="mailto:rushil.shah.dev@gmail.com" target="_blank">
+          <a class="press mail" href="mailto:rushil.shah.dev@gmail.com" target="_blank" aria-label="mail">
           </a>
-          <a class="press whatsapp" href="https://wa.me/917984299636" target="_blank">
+          <a class="press whatsapp" href="https://wa.me/917984299636" target="_blank" aria-label="whatsapp">
           </a>
-          <a class="press linkedin" href="https://in.linkedin.com/in/er-rushil" target="_blank">
+          <a class="press linkedin" href="https://in.linkedin.com/in/er-rushil" target="_blank" aria-label="linkedin">
           </a>
-          <a class="press github" href="https://github.com/anonymous0000007" target="_blank"
+          <a class="press github" href="https://github.com/anonymous0000007" target="_blank" aria-label="github"
             data-is-filter-invert-needed="true">
           </a>
-          <a class="press twitter" href="https://x.com/rushil091998" target="_blank"
+          <a class="press twitter" href="https://x.com/rushil091998" target="_blank" aria-label="twitter"
             data-is-filter-invert-needed="true">
           </a>
         </div>
@@ -252,7 +252,7 @@
           <picture>
             <source srcset="./assets/images/chrome-extension.avif" type="image/avif" />
             <source srcset="./assets/images/chrome-extension.webp" type="image/webp" />
-            <img src="./assets/images/chrome-extension.png" />
+            <img width="100" height="100" src="./assets/images/chrome-extension.png" alt="Chrome Extension Kira" />
           </picture>
           <div class="card-content">
             <h3 class="h3"><b>Chrome Extension Project</b></h3>
@@ -266,7 +266,7 @@
           <picture>
             <source srcset="./assets/images/mozilla.avif" type="image/avif" />
             <source srcset="./assets/images/mozilla.webp" type="image/webp" />
-            <img src="./assets/images/mozilla.png" />
+            <img width="100" height="100" src="./assets/images/mozilla.png" alt="Mozilla Organization" />
           </picture>
           <div class="card-content">
             <h3 class="h3"><b>Mozilla Open Source Contribution</b></h3>
