--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
 
   <!-- Meta Description (SEO) -->
   <meta name="description"
-    content="Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Bob Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
   <meta name="keywords"
-    content="Rushil, Rushil Shah, Rushil+Shah, Rushil Portfolio, Rushil+Portfolio, Rushil Shah Full Stack Developer, Rushil+Shah+Full+Stack+Developer, Rushil Shah Freelancer, Rushil+Shah+Freelancer, Rushil Shah Angular, Best Angular Developer, Best Full Stack Developer, Full Stack Developer, MEAN Stack, MERN Stack, MongoDB, Express, React, Node.js, Web Development, Mobile App Development, JavaScript Developer, Web Applications, Software Development, Meteor, Redux, RxJS, HTML5, CSS3, TypeScript, JavaScript, Storybook, Bootstrap, React Query, NgRx, Java, C++">
-  <meta name="author" content="Rushil Shah">
-  <title>Rushil Shah | Full Stack Developer</title>
+    content="Bob, Bob Shah, Bob+Shah, Bob Portfolio, Bob+Portfolio, Bob Shah Full Stack Developer, Bob+Shah+Full+Stack+Developer, Bob Shah Freelancer, Bob+Shah+Freelancer, Bob Shah Angular, Best Angular Developer, Best Full Stack Developer, Full Stack Developer, MEAN Stack, MERN Stack, MongoDB, Express, React, Node.js, Web Development, Mobile App Development, JavaScript Developer, Web Applications, Software Development, Meteor, Redux, RxJS, HTML5, CSS3, TypeScript, JavaScript, Storybook, Bootstrap, React Query, NgRx, Java, C++">
+  <meta name="author" content="Bob Shah">
+  <title>Bob Shah | Full Stack Developer</title>
 
   <!-- Open Graph Meta Tags (for social sharing) -->
-  <meta property="og:title" content="Rushil Shah | Full Stack Developer">
+  <meta property="og:title" content="Bob Shah | Full Stack Developer">
   <meta property="og:description"
-    content="Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Bob Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
   <meta property="og:image" content="https://anonymous0000007.github.io/portfolio/assets/images/favicon.png">
   <meta property="og:url" content="https://anonymous0000007.github.io/portfolio/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card meta tags -->
   <meta name="twitter:site" content="https://anonymous0000007.github.io/portfolio/">
-  <meta name="twitter:title" content="Rushil Shah | Full Stack Developer">
+  <meta name="twitter:title" content="Bob Shah | Full Stack Developer">
   <meta name="twitter:description"
-    content="Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Bob Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
   <meta name="twitter:image" content="https://anonymous0000007.github.io/portfolio/assets/images/favicon.png">
   <meta name="twitter:url" content="https://anonymous0000007.github.io/portfolio/">
-  <meta name="twitter:creator" content="@Rushil091998">
+  <meta name="twitter:creator" content="@Bob091998">
 
   <!-- Favicon -->
   <link rel="icon"
@@ -53,13 +53,13 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Rushil Shah",
+      "name": "Bob Shah",
       "url": "https://anonymous0000007.github.io/portfolio/",
       "image": "https://anonymous0000007.github.io/portfolio/assets/images/favicon.png",
-      "description": "Rushil Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.",
+      "description": "Bob Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.",
       "sameAs": [
-        "https://www.linkedin.com/in/er-rushil",
-        "https://x.com/Rushil091998",
+        "https://www.linkedin.com/in/er-Bob",
+        "https://x.com/Bob091998",
         "https://github.com/anonymous0000007"
       ],
       "jobTitle": "Full Stack Developer (MEAN/MERN Stack)",
@@ -191,7 +191,7 @@
         <!-- responsive image load -->
         <picture class="man">
           <source srcset="./assets/images/man.svg" media="(min-width: 768px)" />
-          <img width="" height="" alt="Rushil" />
+          <img width="" height="" alt="Bob" />
         </picture>
         <picture class="ring">
           <source srcset="./assets/images/ellipse.svg" media="(min-width: 768px)" />
@@ -201,16 +201,16 @@
 
       <div id="contact-details" class="contact-details">
         <div class="drawer">
-          <a class="press mail" href="mailto:rushil.shah.dev@gmail.com" target="_blank" aria-label="mail">
+          <a class="press mail" href="mailto:Bob.shah.dev@gmail.com" target="_blank" aria-label="mail">
           </a>
           <a class="press whatsapp" href="https://wa.me/917984299636" target="_blank" aria-label="whatsapp">
           </a>
-          <a class="press linkedin" href="https://in.linkedin.com/in/er-rushil" target="_blank" aria-label="linkedin">
+          <a class="press linkedin" href="https://in.linkedin.com/in/er-Bob" target="_blank" aria-label="linkedin">
           </a>
           <a class="press github" href="https://github.com/anonymous0000007" target="_blank" aria-label="github"
             data-is-filter-invert-needed="true">
           </a>
-          <a class="press twitter" href="https://x.com/rushil091998" target="_blank" aria-label="twitter"
+          <a class="press twitter" href="https://x.com/Bob091998" target="_blank" aria-label="twitter"
             data-is-filter-invert-needed="true">
           </a>
         </div>
