--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
 
   <!-- Meta Description (SEO) -->
   <meta name="description"
-    content="Bob Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
   <meta name="keywords"
-    content="Bob, Bob Shah, Bob+Shah, Bob Portfolio, Bob+Portfolio, Bob Shah Full Stack Developer, Bob+Shah+Full+Stack+Developer, Bob Shah Freelancer, Bob+Shah+Freelancer, Bob Shah Angular, Best Angular Developer, Best Full Stack Developer, Full Stack Developer, MEAN Stack, MERN Stack, MongoDB, Express, React, Node.js, Web Development, Mobile App Development, JavaScript Developer, Web Applications, Software Development, Meteor, Redux, RxJS, HTML5, CSS3, TypeScript, JavaScript, Storybook, Bootstrap, React Query, NgRx, Java, C++">
-  <meta name="author" content="Bob Shah">
-  <title>Bob Shah | Full Stack Developer</title>
+    content="Bob, Bob Johnson, Bob+Johnson, Bob Portfolio, Bob+Portfolio, Bob Johnson Full Stack Developer, Bob+Johnson+Full+Stack+Developer, Bob Johnson Freelancer, Bob+Johnson+Freelancer, Bob Johnson Angular, Best Angular Developer, Best Full Stack Developer, Full Stack Developer, MEAN Stack, MERN Stack, MongoDB, Express, React, Node.js, Web Development, Mobile App Development, JavaScript Developer, Web Applications, Software Development, Meteor, Redux, RxJS, HTML5, CSS3, TypeScript, JavaScript, Storybook, Bootstrap, React Query, NgRx, Java, C++">
+  <meta name="author" content="Bob Johnson">
+  <title>Bob Johnson | Full Stack Developer</title>
 
   <!-- Open Graph Meta Tags (for social sharing) -->
-  <meta property="og:title" content="Bob Shah | Full Stack Developer">
+  <meta property="og:title" content="Bob Johnson | Full Stack Developer">
   <meta property="og:description"
-    content="Bob Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
   <meta property="og:image" content="https://anonymous0000007.github.io/portfolio/assets/images/favicon.png">
   <meta property="og:url" content="https://anonymous0000007.github.io/portfolio/">
   <meta property="og:type" content="website">
 
   <!-- Twitter Card meta tags -->
   <meta name="twitter:site" content="https://anonymous0000007.github.io/portfolio/">
-  <meta name="twitter:title" content="Bob Shah | Full Stack Developer">
+  <meta name="twitter:title" content="Bob Johnson | Full Stack Developer">
   <meta name="twitter:description"
-    content="Bob Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
   <meta name="twitter:image" content="https://anonymous0000007.github.io/portfolio/assets/images/favicon.png">
   <meta name="twitter:url" content="https://anonymous0000007.github.io/portfolio/">
   <meta name="twitter:creator" content="@Bob091998">
@@ -53,10 +53,10 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Bob Shah",
+      "name": "Bob Johnson",
       "url": "https://anonymous0000007.github.io/portfolio/",
       "image": "https://anonymous0000007.github.io/portfolio/assets/images/favicon.png",
-      "description": "Bob Shah is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.",
+      "description": "Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.",
       "sameAs": [
         "https://www.linkedin.com/in/er-Bob",
         "https://x.com/Bob091998",
@@ -201,7 +201,7 @@
 
       <div id="contact-details" class="contact-details">
         <div class="drawer">
-          <a class="press mail" href="mailto:Bob.shah.dev@gmail.com" target="_blank" aria-label="mail">
+          <a class="press mail" href="mailto:Bob.Johnson.dev@gmail.com" target="_blank" aria-label="mail">
           </a>
           <a class="press whatsapp" href="https://wa.me/917984299636" target="_blank" aria-label="whatsapp">
           </a>
