--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         coding is precise, my logic sharp, and my ambition fierce.
       </p>
       <p class="h3 text-align-justify">
-        Beyond the keyboard, I am an active open-source contributor, dedicating my skills to projects like Mozilla,
+        ADJJJJ, I am an active open-source contributor, dedicating my skills to projects like Mozilla,
         where I collaborate with a global community of like-minded creators. I'm always looking for new opportunities to
         collaborate, whether it's through freelance projects or innovative partnerships. If you're ready to work with
         someone who's not afraid to take risks, challenge norms, and create something extraordinary, let’s connect. I'm
