--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
       <div id="contact-details" class="contact-details">
         <div class="drawer">
-          <a class="press mail" href="mailto:Bob.Johnson.dev@gmail.com" target="_blank" aria-label="mail">
+          <a class="press mail" href="mailto:adam.karasick@gmail.com" target="_blank" aria-label="mail">
           </a>
 
           <a class="press linkedin" href="https://www.linkedin.com/in/adamkarasick/" target="_blank" aria-label="linkedin">
