--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <title>Bob Johnson | Full Stack Developer</title>
 
   <!-- Open Graph Meta Tags (for social sharing) -->
-  <meta property="og:title" content="Bob Johnson | Full Stack Developer">
+  <meta property="og:title" content="Adam Karasick | Forensic Accounting & Data Analytics">
   <meta property="og:description"
-    content="Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Adam Karasick is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
   <meta property="og:image" content="https://akarasick.github.io/portfolio-1/assets/images/favicon.png">
   <meta property="og:url" content="https://akarasick.github.io/portfolio-1/">
   <meta property="og:type" content="website">
